<resources>
    <string name="app_name">DearMyHealth</string>
    <string name="app_slogan">care for myself</string>

    <string name="change_account">계정변경</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="my_page">마이 페이지</string>
    <string name="setting">설정</string>
    <string name="faq">FAQ</string>
    <string name="search">검색</string>
    <string name="save">저장</string>
    <string name="edit">수정</string>
    <string name="cancel">취소</string>
    <string name="apply">적용</string>

    <string name="navigation_drawer_open">navigation open</string>
    <string name="navigation_drawer_close">navigation close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">홈</string>
    <string name="Diet">식단</string>
    <string name="Department">분과</string>
    <string name="Dosage">복약</string>
    <string name="Activity">운동</string>

    <!-- privacy policy -->
    <string name="privacy_policy_detail">조회된 데이터는 사용자에게 통계를 제공할 목적으로만 사용됩니다.</string>
    <string name="privacy_policy">개인 정보 처리 방침</string>
    <!-- Health Connect -->
    <string name="health_connect_package">com.google.android.apps.healthdata</string>

    <!-- chart -->
    <string name="range_a_day">1일</string>
    <string name="range_a_week">1주</string>
    <string name="range_a_month">1개월</string>
    <string name="range_a_year">1년</string>

    <string name="Dosage_alarm">복약 알림</string>
    <string name="Dosage_manage">복약 일정 관리</string>
    <string name="Dosage_schedule">복약 일정</string>
    <string name="Dosage_info">복약 정보</string>
    <string name="Dosage_addinfo">복약 정보 추가</string>
    <string name="Dosage_prescription">처방전 정보 추가</string>
    <string name="Dosage_entername">제품명을 입력해 주세요</string>
    <string name="Dosage_adddirect">직접 추가하기</string>
    <string name="Dosage_noresult">검색결과가 없습니다.</string>
    <string name="Dosage_edit">수정하기</string>
    <string name="Dosage_delete">삭제하기</string>

    <string name="name">제품명</string>
    <string name="amount">복용량</string>
    <string name="start_date">복용시작일</string>
    <string name="end_date">복용종료일</string>
    <string name="time">복용시간</string>
    <string name="no_result">검색 결과가 없습니다.</string>


    <string name="login_another_account">다른 계정으로 로그인</string>
    <string name="sample_notice2">건강 소식! 세상에 미나리가 너무 좋다는 소식이?</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>



    <!-- BPM -->
    <string name="unit_bpm">bpm</string>
    <string name="unit_temperature">ºC</string>
    <string name="unit_killogram">kg</string>
    <string name="add_data">데이터 추가</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>

    <!-- Exercise -->
    <string name="exercise_details">운동 상세 정보</string>
    <string name="no_exercise_message">오늘 운동 정보가 없어요.\n운동 정보를 추가해볼까요?</string>
    <string name="exercise_time">운동 시간</string>
    <string name="exercise_time_ex">00:41:00</string>
    <string name="exercise_distance">거리</string>
    <string name="exercise_distance_ex">2.90km</string>
    <string name="exercise_calorie">칼로리</string>
    <string name="exercise_calorie_ex">122kcal</string>
    <string name="exercise_speed">속도</string>
    <string name="exercise_now">현재 운동</string>
    <string name="exercise_more">운동 더보기</string>
    <string name="exercise_run">달리기</string>
    <string name="exercise_walk">걷기</string>
    <string name="exercise_hiking">등산</string>
    <string name="exercise_bicycle">자전거</string>
    <string name="exercise_swim">수영</string>
    <string name="exercise_finish">운동 종료하기</string>

    <!-- Diet -->
    <string name="breakfast">아침</string>
    <string name="calory">칼로리</string>
    <string name="unit_calory">kcal</string>
    <string name="one_pack_weight">1회제공량</string>

    <string name="carbohydrate">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="cholesterol">콜레스테롤</string>
    <string name="unit_gram">g</string>
    <string name="liquid_water">액체 수분량</string>
    <string name="total_water">총 수분량</string>

    <string name="calory_chip">칼로리: %1$dkcal</string>
    <string name="carbo_chip">탄수화물: %1$g</string>
    <string name="protein_chip">단백질: %1$g</string>
    <string name="fat_chip">지방: %1$g</string>

    <string name="date_formatted_string_yyyy_mm_dd">%1$s-%2$s-%3$s</string>
    <string name="time_formatted_string_hh_mm">%1$s:%2$s</string>

    <string name="default_nutrition_chip">칼로리: 0kcal</string>
    <string name="default_diet_description">오늘의 식단을 등록해보세요!</string>

    <string name="positive_value_required">0보다 큰 값을 입력해주세요.</string>

    <string name="a_today_diet">오늘의 식사</string>
    <string name="addition_diet_item">식단 정보 추가</string>
    <string name="nutrition_standard_reference">자료출처 : 보건복지부 · 한국영양학회, 2020 한국인 영양소 섭취기준 활용연구, 2021.

       (Ministry of Health and Welfare, The Korean Nutrition Society. Application of Dietary reference intakes for Koreans 2020. Sejong; 2021.)
    </string>
    <string name="nutrition_standard_description">2020년 보건복지부와 한국영양학회를 통해 한국인 영양 섭취 기준이 정립되었습니다. 아래 표를 참조해주세요.</string>
    <string name="nutrition_standard_info1">영유아는 권장섭취량이 아닌 충분 섭취량으로 작성되었습니다. </string>
    <string name="nutrition_standard_info2">지방의 권장 섭취량은 몸무게 1kg 당 1g으로 알려져 있습니다. </string>

</resources>