<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/chart_period_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_radius_square_stroke_r5dp"
        android:backgroundTint="@color/secondary"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chart_range_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_day" />

        <TextView
            android:id="@+id/chart_range_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_week" />

        <TextView
            android:id="@+id/chart_range_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_month" />

        <TextView
            android:id="@+id/chart_range_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_year" />
    </LinearLayout>

    <TextView
        android:id="@+id/metric_chart_data_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="평균"
        app:layout_constraintStart_toStartOf="@id/chart_period_LL"
        app:layout_constraintTop_toBottomOf="@id/chart_period_LL" />

    <TextView
        android:id="@+id/chart_represented_data_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/metric_chart_data_TV"
        app:layout_constraintTop_toBottomOf="@id/metric_chart_data_TV" />


    <TextView
        android:id="@+id/chart_period_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2024년 03월 06일 ~ 2024년 03월 12일"
        app:layout_constraintTop_toBottomOf="@id/chart_represented_data_TV"
        app:layout_constraintStart_toStartOf="@id/metric_chart_data_TV"/>

    <LinearLayout
        android:id="@+id/chart_add_data_LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_radius_square_stroke_r5dp"
        android:backgroundTint="@color/lightgreen"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/metric_chart_data_TV">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_circle_stroke"
            android:padding="3dp"
            app:srcCompat="@drawable/dosage_add" />

        <TextView
            android:id="@+id/data_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/add_data" />
    </LinearLayout>


    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart_period_TV"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>