<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/chart_period_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_radius_square_stroke_r5dp"
        android:backgroundTint="@color/secondary"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/step_range_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_day" />

        <TextView
            android:id="@+id/step_range_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_week" />

        <TextView
            android:id="@+id/step_range_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_month" />

        <TextView
            android:id="@+id/step_range_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/range_a_year" />
    </LinearLayout>

    <Button
        android:id="@+id/prevDayButton"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:scaleX="-1"
        app:layout_constraintBottom_toBottomOf="@+id/currentDateTextView"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@id/currentDateTextView"
        app:layout_constraintTop_toTopOf="@+id/currentDateTextView"
        android:background="@drawable/baseline_navigate_next_24" />

    <Button
        android:id="@+id/nextDayButton"
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@id/currentDateTextView"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/prevDayButton"
        app:layout_constraintTop_toTopOf="@id/currentDateTextView"
        android:background="@drawable/baseline_navigate_next_24" />

    <TextView
        android:id="@+id/currentDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="2024년 4월 29일"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart_period_LL" />

    <TextView
        android:id="@+id/metric_chart_data_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="합계"
        app:layout_constraintStart_toStartOf="@id/chart_period_LL"
        app:layout_constraintTop_toBottomOf="@id/currentDateTextView" />

    <TextView
        android:id="@+id/chart_represented_data_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/metric_chart_data_TV"
        app:layout_constraintTop_toBottomOf="@id/metric_chart_data_TV" />


    <TextView
        android:id="@+id/chart_period_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2024년 03월 06일 ~ 2024년 03월 12일"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/metric_chart_data_TV"
        app:layout_constraintTop_toBottomOf="@id/chart_represented_data_TV" />

    <LinearLayout
        android:id="@+id/step_add_data_LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_radius_square_stroke_r5dp"
        android:backgroundTint="@color/lightgreen"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/metric_chart_data_TV">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_circle_stroke"
            android:padding="3dp"
            app:srcCompat="@drawable/dosage_add" />

        <TextView
            android:id="@+id/step_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/add_data" />
    </LinearLayout>


    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart_period_TV"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>