<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.Dosage.DosageViewModel">

    <FrameLayout
        android:id="@+id/sq1"
        android:layout_width="354dp"
        android:layout_height="267dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="105dp"
        android:background="@drawable/shape_square_stroke"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:text="@string/Dosage_schedule"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/sq2"
        android:layout_width="354dp"
        android:layout_height="267dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/shape_square_stroke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sq1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:text="@string/Dosage_addinfo"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="286dp"
            android:layout_height="45dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/shape_roundsq_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dosage_entername"
                android:textSize="17sp"
                android:textColor="@color/gray"/>
            
            <ImageButton
                android:id="@+id/search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/dosage_search"
                android:layout_marginStart="70dp"
                android:clickable="false"
                tools:ignore="SpeakableTextPresentCheck"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="286dp"
            android:layout_height="139dp"
            android:background="@drawable/shape_roundsq_stroke"
            android:backgroundTint="@color/lightgreen"
            android:layout_marginStart="33dp"
            android:layout_marginTop="112dp"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
